edit one sentence

--- a/LatexManuscript/legacy.tex
+++ b/LatexManuscript/legacy.tex
@@ -259,7 +259,7 @@ These articles used a variety of strict quality filters, including Hardy-Weinber
 They also removed rare alleles and alleles with high degrees of missingness.
 %Indeed, we expect a large number of $Q$-associated variants to be filtered out by some quality controls like the Hardy-Weinberg equilibrium test.
 Despite state-of-the-art quality controls, the variants were imputed onto genotype data, reached genome wide significance for association with biological traits, and were reported to the GWAS catalogue.
-These results indicate that there is a need to remove these variants to avoid spurious GWAS associations. 
+Removing these variants from imputation servers could help avoid spurious associations.
 
 These associations are not necessarily incorrect -- a weak but significant bias in imputation may still result in a correct association.
 To distinguish between variants with weak but significant association with $Q$ from variants with strong biases, we distinguished between variants where the allele frequency difference between individuals with low- and high-$Q$ is larger than a factor of two (which naturally separates two clusters of variants on Figure \ref{90HanSFS_full}).
