--- a/LatexManuscript/MBE/legacy.tex
+++ b/LatexManuscript/MBE/legacy.tex
@@ -89,7 +89,9 @@ Harris and Pritchard further identified distinct mutational spectra across a ran
 In particular, the latter two studies  identified a heterogeneous mutational signature within 1kGP Japanese individuals.
 This heterogeneity is intriguing because differences in germline signatures accumulate over many generations.
 A systematic difference within the Japanese population would suggest sustained environmental or genetic differences across sub-populations within Japan with little to no gene flow.
-\todo{While this signature had been partially reproduced in the SGDP, it had yet to be reproduced in a Japanese dataset, we decided to follow up on this observation, by using a newly sequenced dataset of Japanese individuals from Nagahama \citep{Harris2017a,Aikens2018}.}
+\todo{This signature had been partially reproduced at continental resolution in the SGDP. 
+However, due to smaller sample sizes, statistical power lacked to confirm the signature.
+Moreover, the result had yet to be reproduced in a Japanese dataset, so we decided to follow up on this observation, by using a newly sequenced dataset of Japanese individuals from Nagahama \citep{Harris2017a,Aikens2018}.}
 While we were unable to reproduce the mutational heterogeneity within the Japanese population, we could trace back the source of the discrepancy to a technical artefact in the 1kGP data.
 In addition to creating biases in mutational signatures, this artefact leads to spurious imputation results which have found their way in recent publications and online resources.
 
